--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "chai": "^4.1.2",
     "mocha": "^4.1.0"
   },
+  "repository" : { 
+    "type" : "git",
+  	"url" : "https://github.com/rharasim/gopay-nodejs"
+  },
   "dependencies": {
     "request": "^2.83.0"
   }
